# EZLookdevTools

./: .gitignore  CMakeLists.txt  FindMaya.cmake  README.md  __init__.py
katana/: __init__.py
katana/EZSurfacing/: __init__.py
katana/katana_tools/Macros/: EZCollectionsByType.macro  EZFreeCamera.macro  EZPolyToSubdmesh.macro  EZPrmanAOV.macro  EZPrmanAOVOutputs.macro  EZPrmanMaterialLookDev.macro  EZPrmanPxrTextureReplacePath.macro  EZPrmanRenderInteractiveFilters.macro  EZPrmanTextureSet.macro  EZPrmanTextureSet_element.macro  EZRenderInteractiveFilters.macro  EZRenderSettings.macro  LDTPrmanRenderLayer.macro
katana/katana_tools/Macros/materialLookDevResources/abc/: RenderMan_21_Shader_Swatch.abc  floor_scales.abc  lookdevStudio.abc  (+1 more)
katana/katana_tools/Resolutions/: EZResolutions.xml
katana/katana_tools/Shelves/EZLookdevTools/: EZCollectionsCreate_surfacing_object.py  EZCollectionsCreate_surfacing_project.py  EZMaterials_object.py  EZMaterials_project.py  EZViewportColors_object.py  EZViewportColors_project.py
katana/katana_tools/Shelves/LookdevTools/: CollectionsCreate_surfacing_object.py  CollectionsCreate_surfacing_project.py  MaterialsCreate_surfacing_object.py  MaterialsCreate_surfacing_project.py  ViewportColorsCreate_surfacing_object.py  ViewportColorsCreate_surfacing_project.py  lookdevtools.py
katana/templates/: turntable.katana
katana_toolkit/katana_tools/Shelves/EZLookdevTools/: EZMaterials_project.py  EZViewportColors_object.py
lookdevtools/: __init__.py
lookdevtools/common/: constants.py  templates.py  utils.py
lookdevtools/config/: materials.json
lookdevtools/katana/: __init__.py
lookdevtools/katana/katana/: __init__.py
lookdevtools/katana/surfacing/: __init__.py
lookdevtools/maya/: __init__.py
lookdevtools/maya/maya/: __init__.py  materials.py
lookdevtools/maya/surfacing_projects/: __init__.py  materials.py  viewport.py
lookdevtools/plugins/: katanasurfacingprojects.yapsy-plugin  mayamaterials.yapsy-plugin  mayasurfacingviewport.yapsy-plugin  mayaviewport.yapsy-plugin
lookdevtools/plugins/katanasurfacingprojects/: __init__.py
lookdevtools/plugins/materialmapping/: __init__.py
lookdevtools/plugins/mayaSurfacingProjects/: __init__.py
lookdevtools/plugins/mayamaterials/: __init__.py
lookdevtools/plugins/mayasurfacingprojects/: __init__.py
lookdevtools/plugins/mayasurfacingviewport/: __init__.py
lookdevtools/plugins/mayaviewport/: __init__.py
lookdevtools/plugins/txmake/: __init__.py
lookdevtools/python/: CMakeLists.txt  setup.py.in
lookdevtools/python/katana/katana/: __init__.py
lookdevtools/python/katana/surfacing/: __init__.py
lookdevtools/python/maya/: CMakeLists.txt  __init__.py
lookdevtools/python/maya/maya/: __init__.py  materials.py
lookdevtools/python/maya/surfacing_projects/: __init__.py  viewport.py
lookdevtools/python/plugins/: materialmapping.yapsy-plugin
lookdevtools/python/plugins/katanasurfacingprojects/: __init__.py
lookdevtools/python/plugins/materialmapping/: __init__.py
lookdevtools/python/plugins/mayasurfacingprojects/: __init__.py
lookdevtools/python/plugins/txmake/: __init__.py
lookdevtools/python/renderman/: txmake.py
lookdevtools/python/ui/: __init__.py
lookdevtools/renderman/: txmake.py
lookdevtools/ui/: __init__.py  libs.py  qtutils.py
maya/: __init__.py  maya_main.py  ui.py
maya/EZSurfacing/: __init__.py  ui.py
maya_toolkit/: CMakeLists.txt  __init__.py  ui.py
modules/: FindMaya.cmake
nuke/: init.py
nuke/plugins/: EZAovCorrect.gizmo  EZLigthgroupsContactSheet.gizmo  EZLigthgroupsCorrect.gizmo  init.py
plugins/gaffer/startup/gui/: viewer.py
resources/abc/: cyclo.abc  floorScales.abc  lookdevStudio.abc  swatchHelpers.abc
resources/lookdevStudio/maya/: lookdevStudio_R22.mb
resources/rendermanSwatch/maya/: RenderMan_21_Shader_Swatch.mb
resources/textures/: card.tex
substancepainter/shelve/export-presets/: lookdevtools.spexp
tools/: __init__.py
tools/common/: __init__.py  utilities.py
tools/katana_surfacing/: __init__.py
tools/maya_surfacing_projects/: __init__.py
tools/maya_surfacing_viewport/: __init__.py
tools/plugins/: example_plugin.yapsy-plugin  mayaSurfacingProjects.yapsy-plugin
tools/plugins/example_plugin/: __init__.py
tools/plugins/mayaSurfacingProjects/: __init__.py
tools/ui/: __init__.py
(+1 files in other folders)
